[tool.poetry]
name = "netflix-msl-mitm"
version = "0.1.0"
description = "Parse Netflix MSL data from any request from MitmProxy"
authors = ["retouching <33735357+retouching@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pycryptodomex = "^3.21.0"
mitmproxy = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
